# reflex-dashboard

./: .gitignore  README.txt  app.py  build.sh  control.sh  nginx.conf  pyproject.toml  rxconfig.py  state.py  supervisor.conf  update.sh
reflex_dashboard/: reflex_dashboard.py  state.py
tasks/: ejemplo1.py  ejemplo2.py
